addendum.css
/* ... */
#my-contact-div .contactable-submit {
	vertical-align: baseline;
}

#my-contact-div form textarea {
	overflow: auto;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	color: #a9a9a9;
	margin-top: 3px;
	line-height: 24px;
	min-height: 100px;
}


/* narrowing contactable form to make it more mobile-friendly */

#contactable-contactForm {
	width: 260px !important;
}


form#contactable-contactForm input, 
form#contactable-contactForm textarea, 
form#contactable-contactForm select {
	width: 225px !important;
}

form#contactable-contactForm .contactable-submit {
	width: 238px;
}



/* switch contactable form to right side */

.book-now #contactable-inner {
    background-image: url(./assets/contactable/images/book-now-right.png);
}

#my-contact-div #contactable-inner {
	background-image: url(./assets/contactable/images/contact-right.png);
	right: 0;
	left: auto;
	margin-right: -5px;
	margin-left: 0;
}

#my-contact-div #contactable-contactForm {
	margin-left: auto;
	margin-right: -300px;
	left: auto;
	right: 0;
}





/* index bottom nav tweak */

.header .nav.nav--primary li:last-child a {
 	padding-right: 15px; 
}


/* changing background color on book now sidebars */

.right-sidebar-wrapper .widget-container {
	background: #444;
}

/* fixing padding on mobile nav */

#primary-nav-mobile-id {
	padding-bottom: 0;
}



/* home nav */

#home nav ul {
list-style: none;
list-style-image: none;
margin: 0;
padding: 0;
}


#home-content{
  z-index:99 !important;
}

.slideshow__slides img {
	max-width: none;
}

@media only screen and (min-width: 959px) {
	#home #header .row,
	#home #header .container {
		width: 100%;
		max-width: 100%;
	}	

	#home-slide-wrap {
		left: 9%;
	}

	#home-slide-wrap span {
		left: 20px;
	}

}


#home .primary-nav ul li:last-child a {
	padding-right: 15px;
}

@media only screen and (min-width: 767px) {

	#home .header-outer-wrapper {
		height: 50px;
	}

	#home .header {
	  position: fixed;
	  bottom: 0px;
	  left: 0px;
	  width: 100%;
	  z-index: 200;
	  *zoom: 1;
	}

	#home .header-outer-wrapper {
		position: relative;
	}

	#home .logo-wrapper {
		position: fixed;
		top: -4px;
		left: 8px;
	}

    .slides li a img {
    	width:100% !important;
    }
}

@media only screen and (max-width: 767px) {

	.header-left.left {
		margin-bottom: 10px;
	}

	#home-type,
	#home-slide-wrap,
	#home-content,
	#home-content .home-content-title,
	#home-content .home-content-subtitle {
		display: block;
		max-width: 100%;
		left: 0;
	}

	#home-slide-wrap,
	#home-type {
		position: relative;
		height: auto;
		white-space: normal;
	}

	#home-type,
	#home-content .home-content-title,
	#home-content .home-content-subtitle {
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		padding: 0 100px 0 20px;
		font-size: 16px;
		line-height: 20px;
	}

	#home-content {
		top: 240px;
	}

	ul li:first-child #home-slide-wrap {
		top: 400px;
	}

	#home-content p {
		text-align: left;
	}

	.titlebar-title h1,
	#home-content .home-content-title {
		line-height: 30px;
		font-size: 24px;
	}

	.slideshow--bullets .slideshow__thumbs {
		display: none;
	}

	#home-content .home-content-btn {
		top: 82px;
	}

	.page-wrapper.columns.b0, 
	#philosophy .parallax-section, 
	#concept .parallax-section,
	.page-body {
		padding: 20px 60px 20px 20px;
	}

	.titlebar-outer-wrapper .row .columns {
		padding: 0 60px 0 20px;
	}

	.page-body h1 {
		text-align: left;
	}

	.parallax-section .parallax-title {
		font-size: 20px;
		line-height: 25px;
		text-align: left;
	}

	.titlebar-outer-wrapper .container {
		display: block;
	}

	.blog .titlebar-title,
	.titlebar-title.top-titlebar {
		margin-top: 93px;
		text-align: left;
	}

	.titlebar-title .titlebar-decs {
		line-height: 15px;
	}

	#thoughts .main-wrapper .page-title-wrapper {
		margin-top: -60px;
	}

	.book-now .page-title-wrapper {
		background: none;
	}

	.b40 {
		margin-bottom: 0;
	}

	.book-now .page-title-wrapper .page-title {
		color: #000;
	}

	.book-now .main-wrapper .page-title-wrapper,
	#destinations .main-wrapper .page-title-wrapper {
		height: auto;
		margin-top: 40px;
	}

	.builder-title-wrapper.has_filter .cpt-filters {
		top: -130px;
	}

	.cpt-filters li a {
		background: none;
	}

	.slides li a img {
    	height: auto;
    	width:100% !important;
    }

    .tab-title li {
    	margin-bottom: 1px;
    }

}

@media only screen and (max-width: 959px) {
	.list-grid .main-outer-wrapper.has-titlebar {
		margin-top: 0 !important;
	}

	.page-title-wrapper {
		padding: 0;
		margin-top: 0;
		margin-bottom: 30px;
		background: none;
		height: auto;
	}

	.page-title-wrapper .page-title {
		color: #000;
	}

	.builder-title-wrapper.has_filter .cpt-filters {
		position: relative;
		background: rgba(0,0,0,0.65);
		top: 0;
		margin-bottom: 20px;
	}

	#destinations .main-wrapper .page-title-wrapper {
		display: none;
	}

	#destinations .page-wrapper.columns.b0 {
		padding-top: 0;
	}
}

@media only screen and (max-width: 959px) and (min-width: 768px) {
	#home .primary-nav.slideMenu ul li a {
		padding: 14px 15px;
	}
	#home #primary-nav-id {
		margin-left: auto;
	}
	.slides li a img {
    	height: auto;
    	width:100% !important;
    }
    .page-wrapper.columns.b0, 
	#philosophy .parallax-section, 
	#concept .parallax-section,
	.page-body {
		padding: 20px 60px 20px 60px;
	}
	.titlebar-title.top-titlebar {
	margin-left: 55px;
	}

}

